Add package info

--- a/Metaproject.Users.CDorst.GitCommit/Metaproject.Users.CDorst.GitCommit.csproj
+++ b/Metaproject.Users.CDorst.GitCommit/Metaproject.Users.CDorst.GitCommit.csproj
@@ -1,7 +1,20 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <LangVersion>latest</LangVersion>
+    <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
+
+  <PropertyGroup>
+    <Authors>cdorst</Authors>
+    <Description>Helper for getting CDorst's Git commit user information</Description>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageId>CDorst.Metaproject.Users.CDorst.GitCommit</PackageId>
+    <Version>1.0.0</Version>
+  </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="CDorst.DevOps.VersionControl.Structures.GitCommitUser" Version="1.0.0" />
+  </ItemGroup>
 
 </Project>
